# FastAPI_scaffold

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
api/: main.py  migrate_db.py
api/cruds/: done.py  task.py  user.py
api/models/: task.py
api/routers/: auth.py  done.py  task.py  user.py
api/schemas/: done.py  task.py  user.py
tests/: test_main.py
